Frontnend: Editing CSS reset and Utilities in styles/App.css

--- a/linkedin-frontend/src/styles/App.css
+++ b/linkedin-frontend/src/styles/App.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: rgb(243, 242, 239);
+}
+
 /* Utilities */
 
 tr,
@@ -19,6 +23,10 @@ td {
 
 .round-edges {
     border-radius: 20px;
+}
+
+.border {
+    border: 1px solid rgb(155, 155, 155);
 }
 
 .btn:hover {
@@ -75,11 +83,15 @@ td {
 
 .page-container {
     width: 100vw;
-    height: 100vh;
     align-items: center;
     justify-content: center;
 }
 
 .title {
+    width: 100%;
     font-weight: bold;
+}
+
+.text {
+    width: 100%;
 }
