--- a/linkedin-frontend/src/styles/App.css
+++ b/linkedin-frontend/src/styles/App.css
@@ -8,6 +8,11 @@ body {
     background-color: rgb(243, 242, 239);
 }
 
+img {
+    width: 100%;
+    height: 100%;
+}
+
 /* Utilities */
 
 tr,
@@ -22,19 +27,21 @@ td {
 }
 
 .round-edges {
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 .border {
     border: 1px solid rgb(155, 155, 155);
 }
 
+.eclipse {
+    border-radius: 50%;
+}
+
 .btn:hover {
     opacity: 80%;
     cursor: pointer;
     border: 0;
-    transition: transform 0.2s;
-    transform: scale(1.05);
 }
 
 .flex {
@@ -78,7 +85,7 @@ td {
 }
 
 .light-txt {
-    color: rgb(155, 155, 155);
+    color: rgb(79, 79, 79);
 }
 
 .page-container {
@@ -93,5 +100,13 @@ td {
 }
 
 .text {
+    width: 100%;
+}
+
+.width-40 {
+    width: 40%;
+}
+
+.width-100 {
     width: 100%;
 }
