Frontend: Adding section utilities

--- a/linkedin-frontend/src/styles/App.css
+++ b/linkedin-frontend/src/styles/App.css
@@ -107,6 +107,14 @@ td {
     width: 40%;
 }
 
+.width-60 {
+    width: 60%;
+}
+
 .width-100 {
     width: 100%;
+}
+
+.section {
+    margin: 10px;
 }
