Frontend: Adding profile account styles to styles/account.css

--- a/linkedin-frontend/src/styles/App.css
+++ b/linkedin-frontend/src/styles/App.css
@@ -118,3 +118,12 @@ td {
 .section {
     margin: 10px;
 }
+
+.big-pic {
+    width: 10vh;
+    height: 10vh;
+}
+
+.size-30 {
+    font-size: 30px;
+}
