Frontend: Adding blue text class to utility in styles/App.css

--- a/linkedin-frontend/src/styles/App.css
+++ b/linkedin-frontend/src/styles/App.css
@@ -85,7 +85,11 @@ td {
 }
 
 .light-txt {
-    color: rgb(79, 79, 79);
+    color: rgb(150, 150, 150);
+}
+
+.blue-txt {
+    color: rgb(0, 96, 151);
 }
 
 .page-container {
