--- a/linkedin-frontend/src/styles/button.css
+++ b/linkedin-frontend/src/styles/button.css
@@ -13,3 +13,10 @@
     font-size: 15px;
     background-color: rgba(0, 0, 0, 0);
 }
+
+.auth-button {
+    width: 80%;
+    height: 10%;
+    border-radius: 50px;
+    font-size: 20px;
+}
