--- a/linkedin-frontend/src/styles/input.css
+++ b/linkedin-frontend/src/styles/input.css
@@ -6,5 +6,7 @@
 .auth-input {
     width: 100%;
     height: 35%;
-    font-size: 20px;
+    padding: 10px;
+    font-size: 15px;
+    border-radius: 3px;
 }
