Frontend: Styling left section of pages/Auth.jsx

--- a/linkedin-frontend/src/styles/auth.css
+++ b/linkedin-frontend/src/styles/auth.css
@@ -1,4 +1,32 @@
 .right-content {
     width: 100%;
     height: 93vh;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.auth-block {
+    width: 80%;
+    height: 80%;
+}
+
+.landing-title {
+    width: 100%;
+    font-size: 60px;
+    font-weight: 300;
+    color: rgb(123, 76, 25);
+}
+
+.auth-inputs-container {
+    width: 70%;
+    height: 25%;
+    align-items: center;
+    justify-content: space-around;
+    margin: 10px 0;
+}
+
+.auth-switch-container {
+    width: 100%;
+    height: 5%;
+    margin: 10px 0;
 }
