--- a/linkedin-frontend/src/styles/auth.css
+++ b/linkedin-frontend/src/styles/auth.css
@@ -1,4 +1,9 @@
-.right-content {
+.signup-container {
+    align-items: center;
+    justify-content: center;
+}
+
+.content {
     width: 100%;
     height: 93vh;
     align-items: center;
@@ -29,4 +34,14 @@
     width: 100%;
     height: 5%;
     margin: 10px 0;
+}
+
+.hero-container {
+    width: 100%;
+    height: 93vh;
+}
+
+.hero-image {
+    width: 100%;
+    height: 99%;
 }
