--- a/linkedin-frontend/src/styles/button.css
+++ b/linkedin-frontend/src/styles/button.css
@@ -15,8 +15,8 @@
 }
 
 .auth-button {
-    width: 70%;
-    height: 10%;
+    width: 100%;
+    height: 10vh;
     border-radius: 50px;
     font-size: 20px;
 }
