--- a/linkedin-frontend/src/styles/App.css
+++ b/linkedin-frontend/src/styles/App.css
@@ -69,7 +69,7 @@ td {
 }
 
 .dark-bg {
-    background-color: rgb(0, 96, 151);
+    background-color: rgb(2, 122, 192);
 }
 
 .light-bg {
@@ -89,13 +89,18 @@ td {
 }
 
 .blue-txt {
-    color: rgb(0, 96, 151);
+    color: rgb(2, 122, 192);
+}
+
+.white-txt {
+    color: white;
 }
 
 .page-container {
     width: 100vw;
     align-items: center;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .title {
@@ -109,6 +114,10 @@ td {
 
 .width-40 {
     width: 40%;
+}
+
+.width-25 {
+    width: 25%;
 }
 
 .width-50 {
@@ -125,4 +134,8 @@ td {
 
 .section {
     margin: 10px;
+}
+
+.min-width-500 {
+    min-width: 500px;
 }
