Frontend: Editing inputs and buttons height in input.css buttons.css and

--- a/linkedin-frontend/src/styles/App.css
+++ b/linkedin-frontend/src/styles/App.css
@@ -97,7 +97,7 @@ td {
 }
 
 .page-container {
-    width: 100vw;
+    width: 100%;
     align-items: center;
     justify-content: center;
     overflow-x: hidden;
