--- a/linkedin-frontend/src/styles/input.css
+++ b/linkedin-frontend/src/styles/input.css
@@ -5,7 +5,7 @@
 
 .auth-input {
     width: 100%;
-    height: 35%;
+    height: 7vh;
     padding: 10px;
     font-size: 15px;
     border-radius: 3px;
