Frontend: Adding red text class in styles/App.css utilities

--- a/linkedin-frontend/src/styles/App.css
+++ b/linkedin-frontend/src/styles/App.css
@@ -96,6 +96,10 @@ td {
     color: white;
 }
 
+.red-text {
+    color: crimson;
+}
+
 .page-container {
     width: 100%;
     align-items: center;
