--- a/linkedin-frontend/src/styles/job.css
+++ b/linkedin-frontend/src/styles/job.css
@@ -2,6 +2,7 @@
     width: 95%;
     margin: 0 5px;
     border-bottom: 1px solid rgb(150, 150, 150);
+    justify-content: space-between;
 }
 
 .profile-img-container {
